# gitscan

./: orgas.txt
.github/actions/init/: action.yml  get-repos.py
.github/workflows/: changelogs.yaml  ci.yaml  deploy-pages.yaml  org-summaries.yaml  scan.yaml
repos/MTES-MCT/: CHANGELOG-generated.md  repos.json  repos.txt
repos/MTES-MCT/CGDD-BUN/: overview.json
repos/MTES-MCT/Docurba/: CHANGELOG-generated.json  CHANGELOG-generated.md  commits.txt  github.json  overview.json  tree.txt
repos/SocialGouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/betagouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/betagouv/agreste/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/cloud-gouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/codegouvfr/: CHANGELOG-generated.md  repos.json
repos/demarche-numerique/: CHANGELOG-generated.md  repos.json  repos.txt
repos/etalab/: CHANGELOG-generated.md  repos.json
repos/etalab-ia/: CHANGELOG-generated.md  repos.json  repos.txt
repos/incubateur-ademe/: CHANGELOG-generated.md  repos.json  repos.txt
repos/proconnect-gouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/refugies-info/: CHANGELOG-generated.md  repos.json  repos.txt
repos/suitenumerique/: CHANGELOG-generated.md  repos.json  repos.txt
schemas/: repository.schema.json
scripts/: analyze_labels.py  generate-changelogs.sh  generate-repo-changelog.sh  normalize_labels.sh
web/: Procfile  next.config.js
web/scripts/: build-contributions.ts  build-index.ts
(+2469 files in other folders)
